--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/captDaylight/bottler#readme",
   "dependencies": {
     "fs": "0.0.1-security",
+    "mkdirp": "^0.5.1",
     "path": "^0.12.7"
   }
 }
