--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "mkdirp": "^0.5.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "yamljs": "^0.3.0"
   }
 }
